# cheapwine

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
cheapwine/: __init__.py  cli.py  project.py  runners.py  tui.py  utils.py  wine.py
tests/: test_cheapwine.py
