[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cheapwine"
version = "0.1.0"
description = "A lightweight, project-based Wine prefix and application manager (Wine's version of uv)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Cheapwine Contributors"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "click>=8.0.0",
    "rich>=12.0.0",
]

[project.scripts]
cheapwine = "cheapwine.cli:cli"
cw = "cheapwine.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["cheapwine*"]
